--- a/src/site/_includes/base.liquid
+++ b/src/site/_includes/base.liquid
@@ -25,6 +25,9 @@
         </h1>
         <nav>
           <ul>
+            {% if globals.environment == "development" %}
+              <li><a href="/drafts">drafts</a></li>
+            {% endif %}
             <li><a href="/about">about</a></li>
             <li><a href="https://github.com/davidcgl">github</a></li>
             <li><a href="https://www.linkedin.com/in/davidcgl">linkedin</a></li>
