--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -384,7 +384,7 @@ template {
  */
 :not(pre) > code {
   font-family: SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace;
-  background: rgba(210, 218, 226, 0.5);
+  background: rgba(209, 218, 225, 0.5);
   border-radius: 0.2rem;
   padding: 0.2rem 0;
 }
@@ -398,7 +398,7 @@ pre {
   background: #282a36;
   font-family: SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace;
   font-size: 1.36rem;
-  border-radius: 1rem;
+  border-radius: 0.6rem;
   padding: 1.6rem;
   margin: 1.6rem 0;
   overflow: scroll;
@@ -497,13 +497,17 @@ pre > code {
   cursor: help;
 }
 
+::selection {
+  background: rgba(255, 221, 89, 0.5);
+}
+
 html {
   font-size: 62.5%;
   box-sizing: border-box;
 }
 
 body {
-  color: #1e272e;
+  color: #0a0d0f;
   font-size: 1.6rem;
   font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Roboto, Oxygen-Sans, Ubuntu, Cantarell, sans-serif;
   font-weight: normal;
@@ -527,15 +531,13 @@ h6 {
 }
 
 a {
-  color: #1e272e;
-  box-shadow: inset 0 -0.4em 0 rgba(60, 64, 198, 0.2);
-  text-decoration: none;
+  color: #3c40c6;
+  text-decoration: underline;
 }
 
 a:hover {
-  color: #1e272e;
-  box-shadow: inset 0 -0.4em 0 rgba(5, 196, 107, 0.2);
-  text-decoration: none;
+  color: #05c46b;
+  text-decoration: underline;
 }
 
 em,
@@ -549,7 +551,7 @@ ol {
 }
 
 blockquote {
-  color: #808e9b;
+  color: #5b768b;
   margin: 3.2rem 0;
   padding: 0 3.2rem;
 }
@@ -561,7 +563,7 @@ table {
 
 tr th,
 tr td {
-  border-bottom: 0.1rem solid #d2dae2;
+  border-bottom: 0.1rem solid #d1dae1;
   padding: 1.2rem 1.6rem;
   text-align: left;
 }
@@ -572,7 +574,7 @@ tr td:first-child {
 }
 
 tr th {
-  border-top: 0.1rem solid #d2dae2;
+  border-top: 0.1rem solid #d1dae1;
 }
 
 img {
@@ -583,7 +585,7 @@ img {
 hr {
   border: 0;
   height: 0;
-  border-bottom: 0.1rem solid #d2dae2;
+  border-bottom: 0.1rem solid #d1dae1;
 }
 
 .container {
@@ -618,7 +620,7 @@ hr {
 .container > header h1 a {
   display: block;
   position: relative;
-  background: #1e272e;
+  background: #0a0d0f;
   width: 8rem;
   height: 9.6rem;
 }
@@ -636,7 +638,7 @@ hr {
 
 .container > header nav {
   flex: 1 1 auto;
-  border-bottom: 0.8rem solid #1e272e;
+  border-bottom: 0.8rem solid #0a0d0f;
 }
 
 .container > header nav ul {
@@ -655,7 +657,7 @@ hr {
 }
 
 .container > header nav a {
-  color: #808e9b;
+  color: #5b768b;
   display: block;
   position: absolute;
   right: 0;
@@ -663,15 +665,27 @@ hr {
 }
 
 .container > header nav a:hover {
-  color: #1e272e;
+  color: #0a0d0f;
 }
 
 .post-title {
   margin: 0;
 }
 
+.post-title a {
+  color: #0a0d0f;
+  box-shadow: inset 0 -0.4em 0 rgba(60, 64, 198, 0.2);
+  text-decoration: none;
+}
+
+.post-title a:hover {
+  color: #0a0d0f;
+  box-shadow: inset 0 -0.4em 0 rgba(11, 232, 129, 0.2);
+  text-decoration: none;
+}
+
 .post-date {
-  color: #808e9b;
+  color: #5b768b;
 }
 
 .post-list {
