Update link and nav styles

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,6 +3,8 @@ $slate02: #93a8b9;
 $slate03: #5b768b;
 $slate04: #32414d;
 $slate05: #0a0d0f;
+$grey01: rgba($slate05, 0.3);
+$grey02: rgba($slate05, 0.6);
 $red01: #ef5777;
 $red02: #f53b57;
 $green01: #0be881;
