--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -39,13 +39,15 @@ h6 {
 }
 
 a {
-  color: $violet02;
-  text-decoration: underline;
-}
+  color: $slate05;
+  text-decoration: none;
+  border-bottom: solid 0.1em rgba($blue02, 0.5);
 
-a:hover {
-  color: $green02;
-  text-decoration: underline;
+  &:hover {
+    color: $slate05;
+    text-decoration: none;
+    border-bottom: solid 0.1em rgba($blue02, 1);
+  }
 }
 
 em,
@@ -59,7 +61,7 @@ ol {
 }
 
 blockquote {
-  color: $slate03;
+  color: $slate04;
   margin: ($font-size * 2) 0;
   padding: 0 ($font-size * 2);
 }
@@ -115,8 +117,8 @@ hr {
 
     a,
     a:hover {
-      box-shadow: none;
       text-decoration: none;
+      border-bottom: none;
     }
 
     h1 {
@@ -136,8 +138,8 @@ hr {
         font-size: $font-size * 2;
         font-weight: bold;
         position: absolute;
-        right: $font-size * 0.5;
-        bottom: $font-size * 0.5;
+        right: 0.8rem;
+        bottom: 0.8rem;
         width: $font-size * 3;
         height: $font-size * 2;
       }
@@ -145,12 +147,11 @@ hr {
 
     nav {
       flex: 1 1 auto;
-      border-bottom: ($font-size * 0.5) solid $slate05;
 
       ul {
         display: flex;
         align-items: stretch;
-        justify-content: flex-end;
+        justify-content: flex-start;
         list-style: none;
         padding: 0;
         margin: 0;
@@ -163,14 +164,16 @@ hr {
       }
 
       a {
-        color: $slate03;
+        color: $grey02;
         display: block;
         position: absolute;
         right: 0;
-        bottom: $font-size * 0.5;
+        bottom: 0.7rem;
 
         &:hover {
           color: $slate05;
+          border-bottom: solid 0.1em rgba($blue02, 1);
+          margin-bottom: -0.1em;
         }
       }
     }
@@ -182,19 +185,21 @@ hr {
 
   a {
     color: $slate05;
-    box-shadow: inset 0 -0.4em 0 rgba($violet02, 0.2);
+    // box-shadow: inset 0 -0.4em 0 rgba($violet02, 0.2);
     text-decoration: none;
+    // border-bottom: none;
   }
 
   a:hover {
     color: $slate05;
-    box-shadow: inset 0 -0.4em 0 rgba($green01, 0.2);
+    // box-shadow: inset 0 -0.4em 0 rgba($violet02, 0.4);
     text-decoration: none;
+    // border-bottom: none;
   }
 }
 
 .post-date {
-  color: $slate03;
+  color: $grey02;
 }
 
 .post-list {
