--- a/src/site/_includes/post.liquid
+++ b/src/site/_includes/post.liquid
@@ -4,7 +4,7 @@ layout: base
 
 <article class="post">
   <h1 class="post-title">
-    <a href="{{ page.url }}">{{ title }}</a>
+    {{ title }}
   </h1>
   <div class="post-date">{{ page.date | date: '%B %e, %Y' }}</div>
   {{ content }}
