--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -531,13 +531,15 @@ h6 {
 }
 
 a {
-  color: #3c40c6;
-  text-decoration: underline;
+  color: #0a0d0f;
+  text-decoration: none;
+  border-bottom: solid 0.1em rgba(56, 103, 214, 0.5);
 }
 
 a:hover {
-  color: #05c46b;
-  text-decoration: underline;
+  color: #0a0d0f;
+  text-decoration: none;
+  border-bottom: solid 0.1em #3867d6;
 }
 
 em,
@@ -551,7 +553,7 @@ ol {
 }
 
 blockquote {
-  color: #5b768b;
+  color: #32414d;
   margin: 3.2rem 0;
   padding: 0 3.2rem;
 }
@@ -608,8 +610,8 @@ hr {
 
 .container > header a,
 .container > header a:hover {
-  box-shadow: none;
   text-decoration: none;
+  border-bottom: none;
 }
 
 .container > header h1 {
@@ -638,13 +640,12 @@ hr {
 
 .container > header nav {
   flex: 1 1 auto;
-  border-bottom: 0.8rem solid #0a0d0f;
 }
 
 .container > header nav ul {
   display: flex;
   align-items: stretch;
-  justify-content: flex-end;
+  justify-content: flex-start;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -657,15 +658,17 @@ hr {
 }
 
 .container > header nav a {
-  color: #5b768b;
+  color: rgba(10, 13, 15, 0.6);
   display: block;
   position: absolute;
   right: 0;
-  bottom: 0.8rem;
+  bottom: 0.7rem;
 }
 
 .container > header nav a:hover {
   color: #0a0d0f;
+  border-bottom: solid 0.1em #3867d6;
+  margin-bottom: -0.1em;
 }
 
 .post-title {
@@ -674,18 +677,16 @@ hr {
 
 .post-title a {
   color: #0a0d0f;
-  box-shadow: inset 0 -0.4em 0 rgba(60, 64, 198, 0.2);
   text-decoration: none;
 }
 
 .post-title a:hover {
   color: #0a0d0f;
-  box-shadow: inset 0 -0.4em 0 rgba(11, 232, 129, 0.2);
   text-decoration: none;
 }
 
 .post-date {
-  color: #5b768b;
+  color: rgba(10, 13, 15, 0.6);
 }
 
 .post-list {
