--- a/src/site/about.liquid
+++ b/src/site/about.liquid
@@ -8,3 +8,5 @@ title: About
   where I build products to delight new users. I currently live in the San
   Francisco Bay Area.
 </p>
+
+<img src="https://picsum.photos/600/400" alt="placeholder" width="600" height="400" />
