--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,8 +28,8 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: 2em;
-  margin-bottom: 0.5em;
+  margin-top: 3.2rem;
+  margin-bottom: 0.8rem;
 }
 
 a {
@@ -97,19 +97,18 @@ hr {
   border-bottom: 0.1rem solid $grey01;
 }
 
-.row {
-  max-width: $page-width;
+.page {
   padding-left: $page-gutter;
   padding-right: $page-gutter;
-  margin: 0 auto;
+
+  .row {
+    width: 100%;
+    max-width: $page-width;
+    margin: 0 auto;
+  }
 }
 
-body > main {
-  padding-top: $font-size * 5;
-  padding-bottom: $font-size * 5;
-}
-
-body > header {
+header {
   display: flex;
 
   h1 {
@@ -146,26 +145,24 @@ body > header {
 
     ul {
       display: flex;
-      align-items: stretch;
-      justify-content: flex-start;
+      justify-content: flex-end;
       list-style: none;
-      padding: 0;
+      padding: 6.6rem 0 0.6rem 0;
       margin: 0;
     }
 
     li {
-      position: relative;
-      width: $font-size * 5;
-      height: $font-size * 6;
+      display: inline-block;
+      padding-left: $font-size * 2;
     }
 
     a {
       display: block;
-      color: $grey05;
+      color: $grey04;
+      font-weight: bold;
+      text-transform: uppercase;
+      letter-spacing: 0.1rem;
       border-bottom: none;
-      position: absolute;
-      right: 0;
-      bottom: 0.7rem;
 
       &:hover {
         color: $slate05;
@@ -176,13 +173,8 @@ body > header {
   }
 }
 
-.page-title,
-.post-title {
-  margin: 0;
-}
-
-.post-date {
-  color: $grey05;
+main {
+  padding: $font-size * 3 0;
 }
 
 .post-list {
@@ -190,32 +182,25 @@ body > header {
   padding: 0;
   margin: 0;
 
-  a {
-    color: $slate05;
-    box-shadow: inset 0 -0.4em 0 rgba($blue02, 0.4);
-    text-decoration: none;
-    border-bottom: none;
-
-    &:hover {
-      color: $slate05;
-      box-shadow: inset 0 -0.4em 0 rgba($blue02, 0.6);
-      text-decoration: none;
-      border-bottom: none;
-    }
+  li {
+    padding: 0 0 1em 0;
   }
 
-  li {
-    padding: 0 0 2em 0;
+  .post-date {
+    color: $grey05;
+    font-size: $font-size * 0.75;
+    margin-left: 0.4rem;
   }
 }
 
 .post {
   .post-title {
-    font-size: 3em;
-    margin: 0;
+    font-size: 4.8rem;
+    line-height: 1.2;
+    margin-bottom: 3.2rem;
   }
 
   .post-date {
-    padding: 0 0 2.4em 0;
+    color: $grey05;
   }
 }
