--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -13,11 +13,11 @@ $grey07: rgba($slate05, 0.7);
 $grey08: rgba($slate05, 0.8);
 $grey09: rgba($slate05, 0.9);
 $red01: #ef5777;
+$red02: #f53b57; 
 $blue01: #4b7bec;
 $blue02: #3867d6;
+$green01: #0be881;
 $green02: #05c46b;
-$blue01: #4b7bec;
-$blue02: #3867d6;
 $violet01: #575fcf;
 $violet02: #3c40c6;
 $yellow01: #ffdd59;
@@ -26,9 +26,10 @@ $orange01: #ffc048;
 $orange02: #ffa801;
 
 $font-size: 1.6rem;
-$page-width: $font-size * 40;
+$page-width: $font-size * 37.5;
 $page-gutter: 2rem;
 
 $font-stack: 'IBM Plex Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
   'Helvetica Neue', Roboto, Ubuntu, sans-serif;
-$font-stack-mono: SFMono-Regular, Menlo, Consolas, 'Liberation Mono', monospace;
+$font-stack-mono: 'Fira Mono', SFMono-Regular, Menlo, Consolas,
+  'Liberation Mono', monospace;
