--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -338,7 +338,7 @@ template {
 }
 
 :not(pre) > code {
-  font-family: SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace;
+  font-family: "Fira Mono", SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace;
   background: rgba(209, 218, 225, 0.2);
   border-radius: 0.2rem;
   padding: 0.2rem 0;
@@ -352,7 +352,7 @@ template {
 pre {
   border: 1px solid rgba(10, 13, 15, 0.1);
   background: rgba(209, 218, 225, 0.2);
-  font-family: SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace;
+  font-family: "Fira Mono", SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace;
   font-size: 1.36rem;
   border-radius: 0.6rem;
   padding: 1.6rem;
@@ -362,7 +362,7 @@ pre {
 
 pre > code {
   color: #0a0d0f;
-  font-family: SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace;
+  font-family: "Fira Mono", SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace;
   text-align: left;
   white-space: pre;
   word-spacing: normal;
@@ -490,8 +490,8 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: 2em;
-  margin-bottom: 0.5em;
+  margin-top: 3.2rem;
+  margin-bottom: 0.8rem;
 }
 
 a {
@@ -557,28 +557,27 @@ hr {
   border-bottom: 0.1rem solid rgba(10, 13, 15, 0.1);
 }
 
-.row {
-  max-width: 64rem;
+.page {
   padding-left: 2rem;
   padding-right: 2rem;
+}
+
+.page .row {
+  width: 100%;
+  max-width: 60rem;
   margin: 0 auto;
 }
 
-body > main {
-  padding-top: 8rem;
-  padding-bottom: 8rem;
-}
-
-body > header {
+header {
   display: flex;
 }
 
-body > header h1 {
+header h1 {
   line-height: 1;
   margin: 0;
 }
 
-body > header h1 a {
+header h1 a {
   display: block;
   background: #0a0d0f;
   border-bottom: none;
@@ -587,11 +586,11 @@ body > header h1 a {
   height: 9.6rem;
 }
 
-body > header h1 a:hover {
+header h1 a:hover {
   border-bottom: none;
 }
 
-body > header h1 .logo {
+header h1 .logo {
   color: #fff;
   font-size: 3.2rem;
   font-weight: bold;
@@ -602,47 +601,40 @@ body > header h1 .logo {
   height: 3.2rem;
 }
 
-body > header nav {
+header nav {
   flex: 1 1 auto;
 }
 
-body > header nav ul {
+header nav ul {
   display: flex;
-  align-items: stretch;
-  justify-content: flex-start;
+  justify-content: flex-end;
   list-style: none;
-  padding: 0;
+  padding: 6.6rem 0 0.6rem 0;
   margin: 0;
 }
 
-body > header nav li {
-  position: relative;
-  width: 8rem;
-  height: 9.6rem;
+header nav li {
+  display: inline-block;
+  padding-left: 3.2rem;
 }
 
-body > header nav a {
+header nav a {
   display: block;
-  color: rgba(10, 13, 15, 0.5);
+  color: rgba(10, 13, 15, 0.4);
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
   border-bottom: none;
-  position: absolute;
-  right: 0;
-  bottom: 0.7rem;
 }
 
-body > header nav a:hover {
+header nav a:hover {
   color: #0a0d0f;
   border-bottom: solid 0.1em #3867d6;
   margin-bottom: -0.1em;
 }
 
-.page-title,
-.post-title {
-  margin: 0;
-}
-
-.post-date {
-  color: rgba(10, 13, 15, 0.5);
+main {
+  padding: 4.8rem 0;
 }
 
 .post-list {
@@ -651,29 +643,22 @@ body > header nav a:hover {
   margin: 0;
 }
 
-.post-list a {
-  color: #0a0d0f;
-  box-shadow: inset 0 -0.4em 0 rgba(56, 103, 214, 0.4);
-  text-decoration: none;
-  border-bottom: none;
-}
-
-.post-list a:hover {
-  color: #0a0d0f;
-  box-shadow: inset 0 -0.4em 0 rgba(56, 103, 214, 0.6);
-  text-decoration: none;
-  border-bottom: none;
-}
-
 .post-list li {
-  padding: 0 0 2em 0;
+  padding: 0 0 1em 0;
+}
+
+.post-list .post-date {
+  color: rgba(10, 13, 15, 0.5);
+  font-size: 1.2rem;
+  margin-left: 0.4rem;
 }
 
 .post .post-title {
-  font-size: 3em;
-  margin: 0;
+  font-size: 4.8rem;
+  line-height: 1.2;
+  margin-bottom: 3.2rem;
 }
 
 .post .post-date {
-  padding: 0 0 2.4em 0;
+  color: rgba(10, 13, 15, 0.5);
 }
