--- a/src/site/index.liquid
+++ b/src/site/index.liquid
@@ -3,13 +3,8 @@ layout: base
 title: Home
 ---
 
-<ul class="post-list">
-  {% for post in collections.posts %}
-    <li>
-      <h1 class="post-title">
-        <a href="{{ post.url }}">{{ post.data.title }}</a>
-      </h1>
-      <div class="post-date">{{ post.date | date: "%B %e, %Y" }}</div>
-    </li>
-  {% endfor %}
-</ul>
+{% include post_list, posts: collections.posts, year: 2020 %}
+
+{% if globals.environment == "development" %}
+  <p><a href="/drafts">View drafts</a></p>
+{% endif %}
