Change code formatting, IBM Plex Sans, removed Google Analytics

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,31 +1,26 @@
 @import 'normalize';
 @import 'inter';
-@import 'dracula';
+@import 'prism';
 @import 'variables';
-
-@function remToPx($rem) {
-  @return ($rem / 1rem) * 10px;
-}
 
 ::selection {
   background: rgba($yellow01, 0.5);
 }
 
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 62.5%;
-  box-sizing: border-box;
 }
 
 body {
   color: $slate05;
   font-size: $font-size;
-  font-family: $font-stack-inter;
+  font-family: $font-stack;
   font-weight: normal;
   line-height: 1.5;
-
-  @supports (font-variation-settings: normal) {
-    font-family: $font-stack-inter-var;
-  }
 }
 
 h1,
@@ -61,7 +56,7 @@ ol {
 }
 
 blockquote {
-  color: $slate04;
+  color: $grey06;
   margin: ($font-size * 2) 0;
   padding: 0 ($font-size * 2);
 }
@@ -74,8 +69,8 @@ table {
 tr {
   th,
   td {
-    border-bottom: 0.1rem solid $slate01;
-    padding: ($font-size * 0.75) $font-size;
+    border-bottom: 0.1rem solid $grey01;
+    padding: 1.2rem $font-size;
     text-align: left;
 
     &:first-child {
@@ -84,7 +79,7 @@ tr {
   }
 
   th {
-    border-top: 0.1rem solid $slate01;
+    border-top: 0.1rem solid $grey01;
   }
 }
 
@@ -96,110 +91,90 @@ img {
 hr {
   border: 0;
   height: 0;
-  border-bottom: 0.1rem solid $slate01;
+  border-bottom: 0.1rem solid $grey01;
 }
 
-.container {
-  padding: 0 $page-gutter;
-
-  .row {
-    width: 100%;
-    max-width: $page-width;
-    margin: 0 auto;
-  }
-
-  > main {
-    padding: ($font-size * 3) 0;
-  }
-
-  > header {
-    display: flex;
-
-    a,
-    a:hover {
-      text-decoration: none;
-      border-bottom: none;
-    }
-
-    h1 {
-      line-height: 1;
-      margin: 0;
-
-      a {
-        display: block;
-        position: relative;
-        background: $slate05;
-        width: $font-size * 5;
-        height: $font-size * 6;
-      }
-
-      .logo {
-        color: #fff;
-        font-size: $font-size * 2;
-        font-weight: bold;
-        position: absolute;
-        right: 0.8rem;
-        bottom: 0.8rem;
-        width: $font-size * 3;
-        height: $font-size * 2;
-      }
-    }
-
-    nav {
-      flex: 1 1 auto;
-
-      ul {
-        display: flex;
-        align-items: stretch;
-        justify-content: flex-start;
-        list-style: none;
-        padding: 0;
-        margin: 0;
-      }
-
-      li {
-        position: relative;
-        width: $font-size * 5;
-        height: $font-size * 6;
-      }
-
-      a {
-        color: $grey02;
-        display: block;
-        position: absolute;
-        right: 0;
-        bottom: 0.7rem;
-
-        &:hover {
-          color: $slate05;
-          border-bottom: solid 0.1em rgba($blue02, 1);
-          margin-bottom: -0.1em;
-        }
-      }
-    }
-  }
+.row {
+  max-width: $page-width;
+  padding-left: $page-gutter;
+  padding-right: $page-gutter;
+  margin: 0 auto;
 }
 
-.post-title {
-  margin: 0;
+body > main {
+  padding-top: $font-size * 5;
+  padding-bottom: $font-size * 5;
+}
 
-  a {
-    color: $slate05;
-    // box-shadow: inset 0 -0.4em 0 rgba($violet02, 0.2);
-    text-decoration: none;
-    // border-bottom: none;
-  }
+body > header {
+  display: flex;
 
+  a,
   a:hover {
-    color: $slate05;
-    // box-shadow: inset 0 -0.4em 0 rgba($violet02, 0.4);
     text-decoration: none;
-    // border-bottom: none;
+    border-bottom: none;
+  }
+
+  h1 {
+    line-height: 1;
+    margin: 0;
+
+    a {
+      display: block;
+      position: relative;
+      background: $slate05;
+      width: $font-size * 5;
+      height: $font-size * 6;
+    }
+
+    .logo {
+      color: #fff;
+      font-size: $font-size * 2;
+      font-weight: bold;
+      position: absolute;
+      right: 0.8rem;
+      bottom: 0.8rem;
+      width: $font-size * 3;
+      height: $font-size * 2;
+    }
+  }
+
+  nav {
+    flex: 1 1 auto;
+
+    ul {
+      display: flex;
+      align-items: stretch;
+      justify-content: flex-start;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    li {
+      position: relative;
+      width: $font-size * 5;
+      height: $font-size * 6;
+    }
+
+    a {
+      color: $grey05;
+      display: block;
+      position: absolute;
+      right: 0;
+      bottom: 0.7rem;
+
+      &:hover {
+        color: $slate05;
+        border-bottom: solid 0.1em rgba($blue02, 1);
+        margin-bottom: -0.1em;
+      }
+    }
   }
 }
 
 .post-date {
-  color: $grey02;
+  color: $grey05;
 }
 
 .post-list {
@@ -207,11 +182,36 @@ hr {
   padding: 0;
   margin: 0;
 
+  .post-title {
+    margin: 0;
+
+    a {
+      color: $slate05;
+      box-shadow: inset 0 -0.4em 0 rgba($violet02, 0.2);
+      text-decoration: none;
+      border-bottom: none;
+
+      &:hover {
+        color: $slate05;
+        box-shadow: inset 0 -0.4em 0 rgba($violet02, 0.4);
+        text-decoration: none;
+        border-bottom: none;
+      }
+    }
+  }
+
   li {
     padding: 0 0 2em 0;
   }
 }
 
-.post .post-date {
-  padding: 0 0 2.4rem 0;
+.post {
+  .post-title {
+    font-size: 3em;
+    margin: 0;
+  }
+
+  .post-date {
+    padding: 0 0 2.4em 0;
+  }
 }
