--- a/src/site/_includes/base.liquid
+++ b/src/site/_includes/base.liquid
@@ -1,72 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
-    <meta content="Personal website of David Chen" name="description"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <meta charset="utf-8" />
+    <meta content="Personal website of David Chen" name="description" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>{{ title }}</title>
-    <link as="font" crossorigin="anonymous" href="/assets/fonts/Inter-roman-subset.var.woff2" rel="preload" type="font/woff2"/>
-    <link as="font" crossorigin="anonymous" href="/assets/fonts/Inter-italic-subset.var.woff2" rel="preload" type="font/woff2"/>
+
+    <link href="https://fonts.gstatic.com/" rel="dns-prefetch" />
+    <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
 
     {% if globals.environment == "production" %}
-      <link href="/assets/css/{{ assets['main.min.css'] }}" rel="stylesheet"/>
+      <link href="/assets/css/{{ assets['main.min.css'] }}" rel="stylesheet" />
+      <script defer src="/assets/js/{{ assets['main.min.js'] }}"></script>
     {% else %}
-      <link href="/assets/css/{{ assets['main.css'] }}" rel="stylesheet"/>
+      <link href="/assets/css/{{ assets['main.css'] }}" rel="stylesheet" />
+      <script defer src="/assets/js/{{ assets['main.js'] }}"></script>
     {% endif %}
   </head>
 
   <body>
-    <div class="container">
-      <header class="row">
-        <h1>
-          <a href="/">
-            <div class="logo">dc.</div>
-          </a>
-        </h1>
-        <nav>
-          <ul>
-            {% if globals.environment == "development" %}
-              <li><a href="/drafts">drafts</a></li>
-            {% endif %}
-            <li><a href="/about">about</a></li>
-            <li><a href="https://github.com/davidcgl">github</a></li>
-            <li><a href="https://www.linkedin.com/in/davidcgl">linkedin</a></li>
-          </ul>
-        </nav>
-      </header>
-      <main class="row">
-        {{ content }}
-      </main>
-    </div>
-
-    {% if globals.environment == "production" %}
-      <script src="/assets/js/{{ assets['main.min.js'] }}"></script>
-    {% else %}
-      <script src="/assets/js/{{ assets['main.js'] }}"></script>
-    {% endif %}
-
-    <script>
-      (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        (i[r] =
-          i[r] ||
-          function () {
-            (i[r].q = i[r].q || []).push(arguments);
-          }),
-          (i[r].l = 1 * new Date());
-        (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m);
-      })(
-        window,
-        document,
-        'script',
-        '//www.google-analytics.com/analytics.js',
-        'ga'
-      );
-      ga('create', 'UA-61978847-1', 'auto');
-      ga('send', 'pageview');
-    </script>
+    <header class="row">
+      <h1>
+        <a href="/">
+          <div class="logo">dc.</div>
+        </a>
+      </h1>
+      <nav>
+        <ul>
+          {% if globals.environment == "development" %}
+          <li>
+            <a href="/drafts">drafts</a>
+          </li>
+          {% endif %}
+          <li>
+            <a href="/about">about</a>
+          </li>
+          <li>
+            <a href="https://github.com/davidcgl">github</a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/davidcgl">linkedin</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="row">
+      {{ content }}
+    </main>
   </body>
 </html>
