--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -40,7 +40,7 @@ a {
   &:hover {
     color: $slate05;
     text-decoration: none;
-    border-bottom: solid 0.1em rgba($blue02, 1);
+    border-bottom: solid 0.1em $blue02;
   }
 }
 
@@ -108,22 +108,21 @@ body > main {
 body > header {
   display: flex;
 
-  a,
-  a:hover {
-    text-decoration: none;
-    border-bottom: none;
-  }
-
   h1 {
     line-height: 1;
     margin: 0;
 
     a {
       display: block;
-      position: relative;
       background: $slate05;
+      border-bottom: none;
+      position: relative;
       width: $font-size * 5;
       height: $font-size * 6;
+
+      &:hover {
+        border-bottom: none;
+      }
     }
 
     .logo {
@@ -157,8 +156,9 @@ body > header {
     }
 
     a {
-      color: $grey05;
       display: block;
+      color: $grey05;
+      border-bottom: none;
       position: absolute;
       right: 0;
       bottom: 0.7rem;
@@ -172,6 +172,11 @@ body > header {
   }
 }
 
+.page-title,
+.post-title {
+  margin: 0;
+}
+
 .post-date {
   color: $grey05;
 }
@@ -181,21 +186,17 @@ body > header {
   padding: 0;
   margin: 0;
 
-  .post-title {
-    margin: 0;
+  a {
+    color: $slate05;
+    box-shadow: inset 0 -0.4em 0 rgba($blue02, 0.4);
+    text-decoration: none;
+    border-bottom: none;
 
-    a {
+    &:hover {
       color: $slate05;
-      box-shadow: inset 0 -0.4em 0 rgba($violet02, 0.2);
+      box-shadow: inset 0 -0.4em 0 rgba($blue02, 0.6);
       text-decoration: none;
       border-bottom: none;
-
-      &:hover {
-        color: $slate05;
-        box-shadow: inset 0 -0.4em 0 rgba($violet02, 0.4);
-        text-decoration: none;
-        border-bottom: none;
-      }
     }
   }
 
