--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -27,7 +27,7 @@ $orange02: #ffa801;
 
 $font-size: 1.6rem;
 $page-width: $font-size * 40;
-$page-gutter: $font-size * 1.5;
+$page-gutter: 2rem;
 
 $font-stack: 'IBM Plex Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
   'Helvetica Neue', Roboto, Ubuntu, sans-serif;
