--- a/src/site/404.liquid
+++ b/src/site/404.liquid
@@ -4,5 +4,5 @@ title: Page not found
 permalink: 404.html
 ---
 
-<h1>Page not found</h1>
+<h1 class="page-title">Page not found</h1>
 <a href="/">Return to the homepage</a>
