--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -337,45 +337,6 @@ template {
   display: none;
 }
 
-@font-face {
-  font-family: 'Inter var';
-  font-style: normal;
-  font-weight: 100 900;
-  font-display: swap;
-  src: url("/assets/fonts/Inter-roman-subset.var.woff2") format("woff2");
-}
-
-@font-face {
-  font-family: 'Inter var';
-  font-style: italic;
-  font-weight: 100 900;
-  font-display: swap;
-  src: url("/assets/fonts/Inter-italic-subset.var.woff2") format("woff2");
-}
-
-@font-face {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url("/assets/fonts/Inter-Regular.woff2") format("woff2"), url("/assets/fonts/Inter-Regular.woff") format("woff");
-}
-
-@font-face {
-  font-family: Inter;
-  font-style: italic;
-  font-weight: 400;
-  font-display: swap;
-  src: url("/assets/fonts/Inter-Italic.woff2") format("woff2"), url("/assets/fonts/Inter-Italic.woff") format("woff");
-}
-
-@font-face {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 700;
-  src: url("/assets/fonts/Inter-Bold.woff2") format("woff2"), url("/assets/fonts/Inter-Bold.woff") format("woff");
-}
-
 :not(pre) > code {
   font-family: SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace;
   background: rgba(209, 218, 225, 0.2);
@@ -399,7 +360,7 @@ pre {
   overflow: scroll;
 }
 
-@media only screen and (max-width: remToPx(68.8rem)) {
+@media only screen and (max-width: remToPx(68rem)) {
   pre {
     border-radius: 0;
   }
@@ -601,8 +562,8 @@ hr {
 
 .row {
   max-width: 64rem;
-  padding-left: 2.4rem;
-  padding-right: 2.4rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   margin: 0 auto;
 }
 
@@ -615,12 +576,6 @@ body > header {
   display: flex;
 }
 
-body > header a,
-body > header a:hover {
-  text-decoration: none;
-  border-bottom: none;
-}
-
 body > header h1 {
   line-height: 1;
   margin: 0;
@@ -628,10 +583,15 @@ body > header h1 {
 
 body > header h1 a {
   display: block;
-  position: relative;
   background: #0a0d0f;
+  border-bottom: none;
+  position: relative;
   width: 8rem;
   height: 9.6rem;
+}
+
+body > header h1 a:hover {
+  border-bottom: none;
 }
 
 body > header h1 .logo {
@@ -665,8 +625,9 @@ body > header nav li {
 }
 
 body > header nav a {
-  color: rgba(10, 13, 15, 0.5);
   display: block;
+  color: rgba(10, 13, 15, 0.5);
+  border-bottom: none;
   position: absolute;
   right: 0;
   bottom: 0.7rem;
@@ -676,6 +637,11 @@ body > header nav a:hover {
   color: #0a0d0f;
   border-bottom: solid 0.1em #3867d6;
   margin-bottom: -0.1em;
+}
+
+.page-title,
+.post-title {
+  margin: 0;
 }
 
 .post-date {
@@ -688,20 +654,16 @@ body > header nav a:hover {
   margin: 0;
 }
 
-.post-list .post-title {
-  margin: 0;
-}
-
-.post-list .post-title a {
+.post-list a {
   color: #0a0d0f;
-  box-shadow: inset 0 -0.4em 0 rgba(60, 64, 198, 0.2);
+  box-shadow: inset 0 -0.4em 0 rgba(56, 103, 214, 0.4);
   text-decoration: none;
   border-bottom: none;
 }
 
-.post-list .post-title a:hover {
+.post-list a:hover {
   color: #0a0d0f;
-  box-shadow: inset 0 -0.4em 0 rgba(60, 64, 198, 0.4);
+  box-shadow: inset 0 -0.4em 0 rgba(56, 103, 214, 0.6);
   text-decoration: none;
   border-bottom: none;
 }
