--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -524,23 +524,26 @@ blockquote {
 
 table {
   border-spacing: 0;
+  border: 1px solid rgba(10, 13, 15, 0.1);
+  border-radius: 0.6rem;
   width: 100%;
 }
 
-tr th,
-tr td {
-  border-bottom: 0.1rem solid rgba(10, 13, 15, 0.1);
-  padding: 1.2rem 1.6rem;
-  text-align: left;
-}
-
-tr th:first-child,
-tr td:first-child {
-  padding-left: 0;
-}
-
 tr th {
-  border-top: 0.1rem solid rgba(10, 13, 15, 0.1);
+  background: rgba(209, 218, 225, 0.2);
+  text-align: left;
+  border-bottom: 1px solid rgba(10, 13, 15, 0.1);
+  padding: 1.6rem;
+}
+
+tr td {
+  text-align: left;
+  border-bottom: 1px solid rgba(10, 13, 15, 0.1);
+  padding: 0.8rem 1.6rem;
+}
+
+tr:last-child td {
+  border-bottom: none;
 }
 
 img {
