--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -570,46 +570,28 @@ hr {
 
 header {
   display: flex;
-}
-
-header h1 {
   line-height: 1;
-  margin: 0;
+  padding: 3.2rem 0 0 0;
 }
 
-header h1 a {
-  display: block;
-  background: #0a0d0f;
-  border-bottom: none;
-  position: relative;
-  width: 8rem;
-  height: 9.6rem;
-}
-
-header h1 a:hover {
+header a.logo {
   border-bottom: none;
 }
 
-header h1 .logo {
-  color: #fff;
-  font-size: 3.2rem;
-  font-weight: bold;
-  position: absolute;
-  right: 0.8rem;
-  bottom: 0.8rem;
-  width: 4.8rem;
-  height: 3.2rem;
+header a.logo:hover {
+  border-bottom: none;
 }
 
 header nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
   flex: 1 1 auto;
 }
 
 header nav ul {
-  display: flex;
-  justify-content: flex-end;
   list-style: none;
-  padding: 6.6rem 0 0.6rem 0;
+  padding: 0;
   margin: 0;
 }
 
@@ -623,7 +605,6 @@ header nav a {
   color: rgba(10, 13, 15, 0.4);
   font-weight: bold;
   text-transform: uppercase;
-  letter-spacing: 0.1rem;
   border-bottom: none;
 }
 
