--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -110,22 +110,27 @@ hr {
 
 header {
   display: flex;
-  line-height: 1;
-  padding: 3.2rem 0 0 0;
+  justify-content: space-between;
+  height: 9.6rem;
 
-  a.logo {
-    border-bottom: none;
+  .logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: 0 0 auto;
+    margin: 0;
 
-    &:hover {
+    a,
+    a:hover {
       border-bottom: none;
     }
   }
 
   nav {
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    flex: 1 1 auto;
+    flex-direction: column;
+    justify-content: center;
+    flex: 0 0 auto;
 
     ul {
       list-style: none;
