--- a/src/site/_includes/base.liquid
+++ b/src/site/_includes/base.liquid
@@ -23,9 +23,11 @@
 
     <div class="page">
       <header class="row">
-        <a class="logo" href="/">
-          <img src="/assets/img/logo.svg" width="44" height="24" alt="Logo" />
-        </a>
+        <h1 class="logo">
+          <a href="/">
+            <img alt="Logo" height="24" src="/assets/img/logo.svg" width="44"/>
+          </a>
+        </h1>
         <nav>
           <ul>
             {%- if globals.environment == "development" -%}
