--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,14 +22,29 @@ body {
   line-height: 1.5;
 }
 
-h1,
+
+h1 {
+  font-size: $font-size * 2.5;
+  line-height: 1.25;
+  margin: 0.5em 0;
+}
+
+h2 {
+  font-size: $font-size * 1.5;
+  line-height: 1.25;
+}
+
+h3 {
+  font-size: $font-size * 1.25;
+  line-height: 1.25;
+}
+
 h2,
 h3,
 h4,
 h5,
 h6 {
-  margin-top: 3.2rem;
-  margin-bottom: 0.8rem;
+  margin: 1.5em 0 0.5em;
 }
 
 a {
@@ -174,19 +189,14 @@ main {
 
   .post-date {
     color: $grey05;
-    font-size: $font-size * 0.75;
-    margin-left: 0.4rem;
+    font-size: $font-size * 0.85;
+    margin-left: 0.5em;
   }
 }
 
 .post {
-  .post-title {
-    font-size: 4.8rem;
-    line-height: 1.2;
-    margin-bottom: 3.2rem;
-  }
-
   .post-date {
     color: $grey05;
+    margin: 2em 0 1em;
   }
 }
