--- a/src/site/_includes/post.liquid
+++ b/src/site/_includes/post.liquid
@@ -3,9 +3,7 @@ layout: base
 ---
 
 <article class="post">
-  <h1 class="post-title">
-    {{ title }}
-  </h1>
+  <h1>{{ title }}</h1>
   <div class="post-date">{{ page.date | date: '%B %e, %Y' }}</div>
   {{ content }}
 </article>
