--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -484,14 +484,28 @@ body {
   line-height: 1.5;
 }
 
-h1,
+h1 {
+  font-size: 4rem;
+  line-height: 1.25;
+  margin: 0.5em 0;
+}
+
+h2 {
+  font-size: 2.4rem;
+  line-height: 1.25;
+}
+
+h3 {
+  font-size: 2rem;
+  line-height: 1.25;
+}
+
 h2,
 h3,
 h4,
 h5,
 h6 {
-  margin-top: 3.2rem;
-  margin-bottom: 0.8rem;
+  margin: 1.5em 0 0.5em;
 }
 
 a {
@@ -635,16 +649,11 @@ main {
 
 .post-list .post-date {
   color: rgba(10, 13, 15, 0.5);
-  font-size: 1.2rem;
-  margin-left: 0.4rem;
-}
-
-.post .post-title {
-  font-size: 4.8rem;
-  line-height: 1.2;
-  margin-bottom: 3.2rem;
+  font-size: 1.36rem;
+  margin-left: 0.5em;
 }
 
 .post .post-date {
   color: rgba(10, 13, 15, 0.5);
+  margin: 2em 0 1em;
 }
