--- a/src/site/_includes/base.liquid
+++ b/src/site/_includes/base.liquid
@@ -25,7 +25,7 @@
       <header class="row">
         <h1 class="logo">
           <a href="/">
-            <img alt="Logo" height="24" src="/assets/img/logo.svg" width="44"/>
+            <img height="32" width="32" src="/assets/img/logo.svg" alt="logo" />
           </a>
         </h1>
         <nav>
