--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -484,14 +484,28 @@ body {
   line-height: 1.5;
 }
 
-h1,
+h1 {
+  font-size: 4rem;
+  line-height: 1.25;
+  margin: 0.5em 0;
+}
+
+h2 {
+  font-size: 2.4rem;
+  line-height: 1.25;
+}
+
+h3 {
+  font-size: 2rem;
+  line-height: 1.25;
+}
+
 h2,
 h3,
 h4,
 h5,
 h6 {
-  margin-top: 3.2rem;
-  margin-bottom: 0.8rem;
+  margin: 1.5em 0 0.5em;
 }
 
 a {
@@ -570,23 +584,37 @@ hr {
 
 header {
   display: flex;
-  line-height: 1;
-  padding: 3.2rem 0 0 0;
+  justify-content: space-between;
+  height: 9.6rem;
 }
 
-header a.logo {
+header * {
+  font-size: 1.6rem;
+}
+
+header .logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex: 0 0 auto;
+  margin: 0;
+}
+
+header .logo a,
+header .logo a:hover {
+  display: block;
   border-bottom: none;
 }
 
-header a.logo:hover {
-  border-bottom: none;
+header .logo img {
+  display: block;
 }
 
 header nav {
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  flex: 1 1 auto;
+  flex-direction: column;
+  justify-content: center;
+  flex: 0 0 auto;
 }
 
 header nav ul {
@@ -630,16 +658,11 @@ main {
 
 .post-list .post-date {
   color: rgba(10, 13, 15, 0.5);
-  font-size: 1.2rem;
-  margin-left: 0.4rem;
-}
-
-.post .post-title {
-  font-size: 4.8rem;
-  line-height: 1.2;
-  margin-bottom: 3.2rem;
+  font-size: 1.36rem;
+  margin-left: 0.5em;
 }
 
 .post .post-date {
   color: rgba(10, 13, 15, 0.5);
+  margin: 2em 0 1em;
 }
