--- a/src/site/404.liquid
+++ b/src/site/404.liquid
@@ -1,8 +1,8 @@
 ---
-layout: base
+layout: page
 title: Page not found
 permalink: 404.html
 ---
 
-<h1 class="page-title">Page not found</h1>
-<a href="/">Return to the homepage</a>
+<h1>404</h1>
+<p>Sorry, we can't find what you're looking for.</p>
