--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -604,6 +604,11 @@ header .logo a,
 header .logo a:hover {
   display: block;
   border-bottom: none;
+  transition: all .2s ease-in-out;
+}
+
+header .logo a:hover {
+  transform: scale(1.1);
 }
 
 header .logo img {
