--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -339,9 +339,9 @@ template {
 
 :not(pre) > code {
   font-family: "Fira Mono", SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace;
-  background: rgba(209, 218, 225, 0.2);
+  background: #f6f7f8;
   border-radius: 0.2rem;
-  padding: 0.2rem 0;
+  padding: 0.2em 0;
 }
 
 :not(pre) > code:before, :not(pre) > code:after {
@@ -350,8 +350,8 @@ template {
 }
 
 pre {
-  border: 1px solid rgba(10, 13, 15, 0.1);
-  background: rgba(209, 218, 225, 0.2);
+  border: 0.1rem solid #e7e7e7;
+  background: #f6f7f8;
   font-family: "Fira Mono", SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace;
   font-size: 1.36rem;
   border-radius: 0.6rem;
@@ -530,15 +530,15 @@ ol {
 }
 
 blockquote {
-  color: rgba(10, 13, 15, 0.6);
+  color: #858687;
   margin: 3.2rem 0;
   padding: 0 3.2rem;
 }
 
 table {
+  font-size: 1.36rem;
   border-spacing: 0;
-  border: 0.1rem solid rgba(10, 13, 15, 0.1);
-  border-radius: 0.6rem;
+  border: 0.1rem solid #e7e7e7;
   width: 100%;
 }
 
@@ -547,11 +547,11 @@ tr td {
   text-align: left;
   vertical-align: top;
   padding: 0.8rem 1.6rem;
-  border-bottom: 0.1rem solid rgba(10, 13, 15, 0.1);
+  border-bottom: 0.1rem solid #e7e7e7;
 }
 
 tr th {
-  background: rgba(209, 218, 225, 0.2);
+  background: #f6f7f8;
   font-weight: normal;
 }
 
@@ -567,7 +567,7 @@ img {
 hr {
   border: 0;
   height: 0;
-  border-bottom: 0.1rem solid rgba(10, 13, 15, 0.1);
+  border-bottom: 0.1rem solid #e7e7e7;
 }
 
 .page {
@@ -634,7 +634,7 @@ header nav li {
 
 header nav a {
   display: block;
-  color: rgba(10, 13, 15, 0.4);
+  color: #9d9e9f;
   font-weight: bold;
   letter-spacing: 0.06em;
   text-transform: uppercase;
@@ -661,12 +661,12 @@ main {
 }
 
 .post-list .post-date {
-  color: rgba(10, 13, 15, 0.5);
+  color: #858687;
   font-size: 1.36rem;
   margin-left: 0.5em;
 }
 
 .post .post-date {
-  color: rgba(10, 13, 15, 0.5);
+  color: #858687;
   margin: 2em 0 1em;
 }
