--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,13 +15,12 @@ html {
 }
 
 body {
-  color: $slate05;
+  color: $grey10;
   font-size: $font-size;
   font-family: $font-stack;
   font-weight: normal;
   line-height: 1.5;
 }
-
 
 h1 {
   font-size: $font-size * 2.5;
@@ -44,18 +43,17 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 1.5em 0 0.5em;
+  margin: 2em 0 0.5em;
 }
 
 a {
-  color: $slate05;
+  color: $grey10;
   text-decoration: none;
-  border-bottom: solid 0.1em rgba($blue02, 0.5);
+  border-bottom: solid 0.15em rgba($blue02, 0.5);
 
   &:hover {
-    color: $slate05;
     text-decoration: none;
-    border-bottom: solid 0.1em $blue02;
+    border-bottom: solid 0.15em $blue02;
   }
 }
 
@@ -70,30 +68,30 @@ ol {
 }
 
 blockquote {
-  color: $grey06;
+  color: $grey05;
   margin: ($font-size * 2) 0;
   padding: 0 ($font-size * 2);
 }
 
 table {
+  font-size: $font-size * 0.85;
   border-spacing: 0;
-  border: 1px solid $grey01;
-  border-radius: 0.6rem;
+  border: 0.1rem solid $grey01;
   width: 100%;
 }
 
 tr {
-  th {
-    background: rgba($slate01, 0.2);
-    text-align: left;
-    border-bottom: 1px solid $grey01;
-    padding: $font-size;
-  }
-
+  th,
   td {
     text-align: left;
-    border-bottom: 1px solid $grey01;
-    padding: ($font-size * 0.5) $font-size;
+    vertical-align: top;
+    padding: $font-size * 0.5 $font-size;
+    border-bottom: 0.1rem solid $grey01;
+  }
+
+  th {
+    background: $background-light;
+    font-weight: normal;
   }
 
   &:last-child td {
@@ -143,6 +141,11 @@ header {
     a:hover {
       display: block;
       border-bottom: none;
+      transition: all .2s ease-in-out;
+    }
+
+    a:hover {
+      transform: scale(1.1);
     }
 
     img {
@@ -171,20 +174,20 @@ header {
       display: block;
       color: $grey04;
       font-weight: bold;
+      letter-spacing: 0.06em;
       text-transform: uppercase;
       border-bottom: none;
 
       &:hover {
-        color: $slate05;
-        border-bottom: solid 0.1em rgba($blue02, 1);
-        margin-bottom: -0.1em;
+        color: $grey10;
+        border-bottom: none;
       }
     }
   }
 }
 
 main {
-  padding: $font-size * 3 0;
+  padding: $font-size * 3 0 $font-size * 6;
 }
 
 .post-list {
