Improve link contrast ratio

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,7 +3,7 @@ $grey02: #cecfcf;
 $grey03: #b6b6b7;
 $grey04: #9d9e9f;
 $grey05: #858687;
-$grey06: #6c6e6f;
+$grey06: #6c6e6f; // contrast ratio 5.13 on white bg
 $grey07: #545657; 
 $grey08: #3b3d3f;
 $grey09: #232527; 
@@ -23,7 +23,7 @@ $orange02: #ffa801;
 $slate01: #5b768b;
 $slate02: #32414d;
 
-$background-light: #f6f7f8;
+$background-light: #f8f9fa;
 
 $font-size: 1.6rem;
 $page-width: $font-size * 33.75;
