Update to new blue-slate logo

--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -607,7 +607,7 @@ header .logo a:hover {
 }
 
 header .logo a:hover {
-  transform: scale(1.1);
+  transform: translateY(2px);
 }
 
 header .logo svg {
